# MacSonic

./: README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  filesystem.rs  mod.rs  system.rs
src-tauri/src/models/: audio.rs  directory.rs  mod.rs
src/components/browser/: AddFolderButton.tsx  FolderBrowser.tsx  FolderNode.tsx
src/components/controls/: PlaybackControls.tsx  ShuffleRepeat.tsx  TransportBar.tsx  VolumeControl.tsx
src/components/filelist/: ColumnHeader.tsx  FileList.tsx  FormatBadge.tsx
src/components/layout/: AppLayout.tsx  StatusBar.tsx  TitleBar.tsx
src/components/shared/: ContextMenu.tsx
src/components/waveform/: PeakMeter.tsx  TimeDisplay.tsx  WaveformCanvas.tsx  WaveformDisplay.tsx
src/hooks/: useAudioPlayer.ts  useKeyboardShortcuts.ts
src/lib/: columns.ts  tauriCommands.ts  timeFormatter.ts  waveformGenerator.ts
src/stores/: fileSystemStore.ts  playerStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: audio.ts  contextMenu.ts  fileSystem.ts  ui.ts
