[package]
name = "macsonic"
version = "0.1.0"
description = "A Resonic-inspired music player for macOS"
authors = ["jake"]
edition = "2021"

[lib]
name = "macsonic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
walkdir = "2"
tokio = { version = "1", features = ["fs", "rt"] }
